@@ -6,6 +6,7 @@ Changes in 2.8.19
 - Add 'Last Login' column label in Export.php
 - Bugfix do not pass prompt when Cancel in Prompts.php
 - Fix bug when email set without any contact + bug when current student in CreateParents.php
+- Fix propose to create user in Moodle in Moodle/functions.php
 
 Changes in 2.8.18
 -----------------
